# boxscript-rs

./: .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  bs.sh  shell.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: discord_status_embed.yaml  discord_status_embed.yml  rustup.yaml  rustup.yml
src/: main.rs
src/cli/: env.rs
src/lang/: box.rs  datatype.rs  expression.rs  interpreter.rs  math.rs  matrix.rs  mod.rs  validator.rs
