[package]
name = "boxscript"
version = "0.1.0"
authors = ["pyxiis <47072520+pyxiis@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/boxscript/boxscript-rs"
publish = false

[dependencies]
ansi_term = "0.12.1"
clap = "2.33.3"
lazy_static = "1.4.0"
num = "0.4.0"
num-traits = "0.2.14"
regex = "1.5.4"
